--- a/index.html
+++ b/index.html
@@ -11,32 +11,34 @@
   <body>
     <section class="calculator">
       <p id="inputDisplay">0</p>
-      <div>
-        <button id="clear">C</button>
-      </div>
-      <div>
-        <button id="seven">7</button>
-        <button id="eight">8</button>
-        <button id="nine">9</button>
-        <button id="multiply">X</button>
-      </div>
-      <div>
-        <button id="four">4</button>
-        <button id="five">5</button>
-        <button id="six">6</button>
-        <button id="minus">-</button>
-      </div>
-      <div>
-        <button id="one">1</button>
-        <button id="two">2</button>
-        <button id="three">3</button>
-        <button id="plus">+</button>
-      </div>
-      <div>
-        <button id="divide">/</button>
-        <button id="zero">0</button>
-        <button id="decimal">.</button>
-        <button id="equals">=</button>
+      <div id="calculator-buttons">
+        <div class="clear">
+          <button id="clear">C</button>
+        </div>
+        <div class="button-style-first-row">
+          <button id="seven" class="btn">7</button>
+          <button id="eight" class="btn">8</button>
+          <button id="nine" class="btn">9</button>
+          <button id="multiply" class="btn">X</button>
+        </div>
+        <div class="button-style-second-row">
+          <button id="four" class="btn">4</button>
+          <button id="five" class="btn">5</button>
+          <button id="six" class="btn">6</button>
+          <button id="minus" class="btn">-</button>
+        </div>
+        <div class="button-style-third-row">
+          <button id="one" class="btn">1</button>
+          <button id="two" class="btn">2</button>
+          <button id="three" class="btn">3</button>
+          <button id="plus" class="btn">+</button>
+        </div>
+        <div class="button-style-fourth-row">
+          <button id="divide" class="btn">/</button>
+          <button id="zero" class="btn">0</button>
+          <button id="decimal" class="btn">.</button>
+          <button id="equals" class="btn">=</button>
+        </div>
       </div>
     </section>
   </body>
